change media query for search box to prevent overflow

--- a/assets/style.css
+++ b/assets/style.css
@@ -272,13 +272,8 @@ footer {
 @media (max-width: 700px) {
 
   .fullSearchBox.search {
-    max-height: 40vh;
+    max-width: 70vw;
     font-size: 6vh;
-    border-width: 1vh;
-  }
-  
-  .fullSearchBox.search_icon {
-    flex: 0 1 25vh;
   }
 
   #search_info {
